# ProFinancas

./: .gitignore  LICENSE  README.md
.cursor/agents/: github-projects.md
.cursor/rules/: django-drf-patterns.mdc  flutter-dart-patterns.mdc
.cursor/skills/clean-architecture/: SKILL.md  django-layers.md  flutter-layers.md
.cursor/skills/design-frontend/: SKILL.md  components.md  screens.md
back/: .env.example  API_DOCUMENTATION.md  IMPLEMENTATION_SUMMARY.md  README.md  db.sqlite3  manage.py  pyproject.toml  pytest.ini
back/ProFinanzas/: asgi.py  settings.py  settings_dev.py  settings_test.py  urls.py  wsgi.py
back/auth/: serializers.py  views.py
back/doc/: doc.md
back/transactions/: admin.py  apps.py  models.py  serializers.py  services.py  test_api.py  tests.py  urls.py  views.py
back/transactions/migrations/: 0001_initial.py
back/usuarios/: models.py  serializers.py  services.py  tests.py  urls.py  views.py
back/usuarios/migrations/: 0001_initial.py
pro_finanzas/: README.md  pubspec.yaml
pro_finanzas/android/app/: build.gradle.kts
pro_finanzas/ios/Runner/: Info.plist
pro_finanzas/ios/Runner.xcodeproj/: project.pbxproj
pro_finanzas/lib/: main.dart
pro_finanzas/lib/core/api/: _platform_io_stub.dart  _platform_io_vm.dart  (+2 more)
pro_finanzas/linux/: CMakeLists.txt
pro_finanzas/linux/runner/: my_application.cc
pro_finanzas/macos/Runner.xcodeproj/: project.pbxproj
pro_finanzas/test/: widget_test.dart
pro_finanzas/web/: index.html  manifest.json
pro_finanzas/windows/: CMakeLists.txt
pro_finanzas/windows/runner/: Runner.rc  main.cpp
(+64 files in other folders)
